Create variable in the index.html for handler the screen objects

--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang='br'>
-<head>   <!-ctrl + alt + C para abrir no browser--> 
-	<title></title>
+<head>   <!-ctrl + alt + C open browser--> 
+	<meta charset = "UTF-8">
+	<title>Space Invaders</title>
+	<script src="js/helpers.js"> 
+	</script>
+	<style>
+	   /* background of the game */	
+       canvas{
+           background-color> #000; 
+           display: block;
+           position: absolute;
+           margin:auto;
+           top:0;
+           bottom: 0;
+           left:  0;
+           right: 0;	
+       }    
+
+	</style>
 		 
 </head>
 <body>
 
 </body>
+<script>
+   var screen, input, frames;
+   var alSprite, taSprite, ciSprite;
+   var aliens, dir, tank, bullets, cities;
+
+   function main() {
+
+   };
+   function init(){};
+   function run(){};
+   function update(){};
+   function render(){};
+   
+
+   main();
+</script>
+
 </html>
