--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       frame = 0; // inicialization
       spFrame = 0;
       lvFrame = 60; 
-      dir = 2;
+      dir = 1;
 
 
       aliens = [];
@@ -93,7 +93,7 @@
   function update(){
       frame++;
       if(frame% lvFrame === 0){
-        spFrame = (spFrame + 1) % 2;
+        spFrame = (spFrame + 1) % 2; // I don't understand this pass
 
         for(var i= 0 , len = aliens.length; i<len; i++){
           var a = aliens[i];
@@ -103,9 +103,11 @@
   };
               
   function render(){ // aliens is global variable
-   	   for( var i=0, len = aliens.length; i<len; i++){
-           var a = aliens[i];
-           screen.drawSprite(a.sprite[spFrame],a.x,a.y); // a.sprite[0] is position of recharge and a.sprite[1] is position of attack
+      screen.clear();  
+
+   	  for( var i=0, len = aliens.length; i<len; i++){
+        var a = aliens[i];
+        screen.drawSprite(a.sprite[spFrame],a.x,a.y); // a.sprite[0] is position of recharge and a.sprite[1] is position of attack
        }
   };
 
