--- a/index.html
+++ b/index.html
@@ -61,9 +61,15 @@
   function init(){ // queuing the aliens 
       frame = 0; // inicialization
       spFrame = 0;
-      lvFrame = 20; 
+      lvFrame = 60; 
       dir = 1;
 
+      
+      tank = {
+        sprite: taSprite,
+        x: (screen.width - taSprite.w)/2,
+        y: screen.height - (30 + taSprite.h)
+      }
 
       aliens = [];
       var rows = [1, 0, 0, 2, 2]; // defination tipy of alien
@@ -91,6 +97,13 @@
    	window.requestAnimationFrame(loop, screen.canvas);
    };
   function update(){
+      if(input.isDown(37)){ // left
+          tank.x -= 4;
+      };
+      if(input.isDown(39)){ // right
+          tank.x += 4; 
+      };
+
       frame++;
       if(frame% lvFrame === 0){
         spFrame = (spFrame + 1) % 2; // I don't understand this pass
@@ -122,6 +135,8 @@
         var a = aliens[i];
         screen.drawSprite(a.sprite[spFrame],a.x,a.y); // a.sprite[0] is position of recharge and a.sprite[1] is position of attack
        }
+
+       screen.drawSprite(tank.sprite, tank.x, tank.y);
   };
 
   main();
