--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
 <body>
   
 
-
-
 </body>
 <script>
 /* Variables enable in the game */ 
@@ -70,6 +68,8 @@
         y: screen.height - (30 + taSprite.h)
       }
 
+      bullets = [];
+
       aliens = [];
       var rows = [1, 0, 0, 2, 2]; // defination tipy of alien
       for(var i = 0, len = rows.length; i<len; i++){
@@ -103,7 +103,11 @@
           tank.x += 4; 
       };
 
-      tank.x = Math.max(Math.min(tank.x, screen.width - (30 + taSprite.w)),30);
+      tank.x = Math.max(Math.min(tank.x, screen.width - (30 + taSprite.w)),30); // restrict left and right screen for the tank.
+
+      if(input.isPressed(32)){ //space
+           bullets.push(new Bullet(tank.x, tank.y, -8, 2, 6, "#fff"))
+      };
 
       frame++;
       if(frame% lvFrame === 0){
@@ -111,7 +115,6 @@
         
         var _max = 0, _min = screen.width ; // max position in the screen and min position;
          
-
         for(var i= 0 , len = aliens.length; i<len; i++){
           var a = aliens[i];
           a.x += 30*dir;
@@ -135,7 +138,13 @@
    	  for( var i=0, len = aliens.length; i<len; i++){
         var a = aliens[i];
         screen.drawSprite(a.sprite[spFrame],a.x,a.y); // a.sprite[0] is position of recharge and a.sprite[1] is position of attack
-       }
+       };
+
+       screen.ctx.save(); // ?
+       for(var i = 0, len = bullets.length; i<len; i++){
+            screen.drawBullet(bullets[i]);
+       };
+       screen.ctx.restore();
 
        screen.drawSprite(tank.sprite, tank.x, tank.y);
   };
